--- a/assets/css/template-style.css
+++ b/assets/css/template-style.css
@@ -110,5 +110,15 @@ blockquote {
 }
 
 .summary {
-    margin-bottom: 4em;
+    width: 50%;
+    margin: auto;
+}
+
+.continue-reading {
+    text-align: center;
+    margin-top: 4em;
+}
+
+hr.list-sep {
+    margin: 4em 0;
 }
