Use RelPermalink for stylesheets

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,11 +10,11 @@
         <link rel="stylesheet" href="{{ "css/pattern.min.css" | relURL }}">
         {{ $templateStyle := resources.Get "css/landing-page.css" }}
         {{ $style := $templateStyle | resources.ExecuteAsTemplate "css/landing-page.css" . }}
-        <link rel="stylesheet" type="text/css" href="{{ $style.Permalink }}">
+        <link rel="stylesheet" type="text/css" href="{{ $style.RelPermalink }}">
     {{ end }}
     {{ $templateStyle := resources.Get "css/template-style.css" }}
     {{ $style := $templateStyle | resources.ExecuteAsTemplate "css/style.css" . }}
-    <link rel="stylesheet" type="text/css" href="{{ $style.Permalink }}">
+    <link rel="stylesheet" type="text/css" href="{{ $style.RelPermalink }}">
     {{ if .Params.katex }}
         <link rel="stylesheet" href="{{ "css/katex.min.css" | relURL }}">
     {{ end }}
