--- a/layouts/partials/analytics.html
+++ b/layouts/partials/analytics.html
@@ -1,9 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-53512121-3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LCGN32XDMX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-53512121-3');
+  gtag('config', 'G-LCGN32XDMX');
 </script>
