Add subscribe form to bottom of blog posts
Closes #4

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,4 +29,9 @@
         {{ .Content }}
     </div>
 
+    {{ if eq .Section "blog" }}
+        <hr>
+        {{ partial "sub-blog.html" . }}
+    {{ end }}
+
 {{ end }}
