--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,26 +5,39 @@
  */
 
 /* You can override the default Infima variables here. */
+/* Old primary hue: 147
+/* New primary hue (blue): 220 */
+/* :root {
+  --ifm-color-primary: #2e4b85;
+  --ifm-color-primary-dark: #2a447a;
+  --ifm-color-primary-darker: #274072;
+  --ifm-color-primary-darkest: #21355f;
+  --ifm-color-primary-light: #345493;
+  --ifm-color-primary-lighter: #345598;
+  --ifm-color-primary-lightest: #3d63ae;
+  --ifm-code-font-size: 95%;
+} */
+/* New primary hue (orange): 25 */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #1976d2;
+  --ifm-color-primary-dark: #004ba0;
+  --ifm-color-primary-darker: #003F88;
+  --ifm-color-primary-darkest: #002754;
+  --ifm-color-primary-light: #63a4ff;
+  --ifm-color-primary-lighter: #7DB4FF;
+  --ifm-color-primary-lightest: #B1D2FF;
   --ifm-code-font-size: 95%;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 html[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #2EB5F3;
+  --ifm-color-primary-dark: #29A2DA;
+  --ifm-color-primary-darker: #248FC0;
+  --ifm-color-primary-darkest: #207CA6;
+  --ifm-color-primary-light: #69e2ff;
+  --ifm-color-primary-lighter: #9CECFF;
+  --ifm-color-primary-lightest: #CFF6FF;
 }
 
 .docusaurus-highlight-code-line {
