--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -50,3 +50,8 @@ html[data-theme='dark'] {
 html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+.youtube-video-player {
+  width: 560px;
+  height: 315px;
+}
