Clean up a ton of stuff
Add ruby syntax highlighting

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -54,6 +54,9 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 .youtube-video-player {
   width: 560px;
   height: 315px;
+  margin: auto;
+  display: block;
+  margin-bottom: 1.5em;
 }
 
 article figcaption {
