--- a/astrowind/src/components/widgets/Announcement.astro
+++ b/astrowind/src/components/widgets/Announcement.astro
@@ -1,6 +1,6 @@
 ---
 ---
-
+<!-- 
 <div
   class="dark text-muted text-sm bg-black dark:bg-transparent dark:border-b dark:border-slate-800 dark:text-slate-400 hidden md:block overflow-hidden px-3 py-2 relative text-ellipsis whitespace-nowrap"
 >
@@ -22,4 +22,4 @@
       height="20"
     />
   </a>
-</div>
+</div> -->
