--- a/astrowind/src/components/Logo.astro
+++ b/astrowind/src/components/Logo.astro
@@ -1,7 +1,34 @@
 ---
 import { SITE } from 'astrowind:config';
+
+// New emoji every day
+var currentDateInMillis = Date.now();
+var currentDaySinceEpoch = Math.floor(currentDateInMillis / (1000 * 60 * 60 * 24));
+const emojis = [
+  '🌩',
+  '🗣',
+  '🚁',
+  '🛎',
+  '😳',
+  '🐋',
+  '📈',
+  '🚀',
+  '🛰️',
+  '📢',
+  '🐘',
+  '🏆',
+  '🔋',
+  '🦀',
+  '🍍',
+  '🍇',
+  '💿',
+  '⛰',
+  '🐧',
+  '🎈',
+]
+const randomEmoji = emojis[currentDaySinceEpoch % emojis.length];
 ---
 
 <span class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white">
-  🚀 {SITE?.name}
+  {randomEmoji} {SITE?.name}
 </span>
