Add products pages

--- a/astrowind/src/pages/index.astro
+++ b/astrowind/src/pages/index.astro
@@ -14,7 +14,7 @@ import Brands from '~/components/widgets/Brands.astro';
 import YoutubeVideo from '~/components/common/YoutubeVideo.astro';
 
 const metadata = {
-  title: 'Startup Landing Page',
+  title: 'Home',
 };
 ---
 
@@ -22,7 +22,7 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="Startup Web Demo"
+    tagline="Take Back Tech"
     actions={[
       {
         variant: 'primary',
