--- a/astrowind/src/pages/team/index.astro
+++ b/astrowind/src/pages/team/index.astro
@@ -2,7 +2,7 @@
 import People from '~/components/widgets/People.astro';
 import Layout from '~/layouts/PageLayout.astro';
 const metadata = {
-  title: 'Mobile App Homepage',
+  title: 'Team',
 };
 ---
 
