--- a/astrowind/src/pages/team/steve.astro
+++ b/astrowind/src/pages/team/steve.astro
@@ -17,32 +17,12 @@ const metadata = {
 
 <Layout metadata={metadata}>
   <Fragment slot="announcement"></Fragment>
-  <Fragment slot="header">
-    <Header
-      links={[
-        { text: 'Home', href: '#' },
-        { text: 'About', href: '#about' },
-        { text: 'Resume', href: '#resume' },
-        { text: 'Porfolio', href: '#porfolio' },
-        { text: 'Blog', href: '#blog' },
-        { text: 'Github', href: 'https://github.com/onwidget' },
-      ]}
-      actions={[
-        {
-          text: 'Hire me',
-          href: '#',
-        },
-      ]}
-      isSticky
-      showToggleTheme
-    />
-  </Fragment>
 
   <!-- Hero2 Widget ******************* -->
 
   <Hero
     id="hero"
-    title="Sarah Johnson"
+    title="Steve Grice"
     tagline="Personal Web Demo"
     actions={[{ variant: "primary", target: '_blank', text: 'Hire me', href: '/' }]}
   >
