Comment out unused sections

--- a/astrowind/src/pages/index.astro
+++ b/astrowind/src/pages/index.astro
@@ -27,26 +27,23 @@ const metadata = {
       {
         variant: 'primary',
         target: '_blank',
-        text: 'Get templates',
-        href: 'https://github.com/onwidget/astrowind',
-        icon: 'tabler:download',
+        text: 'Join us',
+        href: 'https://discord.gg/5m5yFgDPF5',
+        icon: 'tabler:brand-discord-filled',
       },
       { text: 'Learn more', href: '#features' },
     ]}
   >
     <Fragment slot="title">
-      Improve <span class="hidden sm:inline">the online presence of</span> your <span
-        class="text-accent dark:text-white highlight">Startup</span
-      > with Astrowind templates
+      <span class="text-orange-400 highlight">Regain control</span> <span class="hidden sm:inline"></span>of your attention</span> by understanding <span class="text-accent dark:text-green-500 highlight">the tech</span> that runs the world.
     </Fragment>
 
     <Fragment slot="subtitle">
-      Step into the spotlight with <span class="font-semibold">Astrowind</span> templates, your pathway to fortifying your
-      startup's digital footprint, fostering credibility, and expanding your reach.
+      By self-hosting your own services and programming things yourself, you'll gain control of <span class="font-semibold">your data, your attention, and your life</span>.
+      Our goal at PageKey is to make that as simple as possible.
     </Fragment>
-
     <Fragment slot="image">
-      <YoutubeVideo videoId="gxBkghlglTg" title="Astro just Launched.... Could it be the ultimate web framework?" />
+      <YoutubeVideo videoId="7Kock_b-glg" title="PageKey Channel Trailer" />
     </Fragment>
   </Hero>
 
@@ -63,7 +60,7 @@ const metadata = {
 
   <!-- Stats Widget ****************** -->
 
-  <Stats
+  <!-- <Stats
     title="Discover the impressive impact of Astrowind"
     subtitle="The numbers below reflect the trust our users have placed in us and the remarkable outcomes we've helped them achieve."
     stats={[
@@ -72,11 +69,11 @@ const metadata = {
       { title: 'User Ratings', amount: '4.8' },
       { title: 'Satisfied Clients', amount: '116K' },
     ]}
-  />
+  /> -->
 
   <!-- Brands Widget ****************** -->
 
-  <Brands
+  <!-- <Brands
     title="Partnerships & Collaborations"
     subtitle="At Astrowind, we believe in the power of collaboration to drive innovation and create exceptional experiences."
     icons={[]}
@@ -119,7 +116,7 @@ const metadata = {
         alt: 'Yahoo',
       },
     ]}
-  />
+  /> -->
 
   <!-- Features2 Widget ************** -->
 
@@ -295,9 +292,9 @@ const metadata = {
       {
         variant: 'primary',
         target: '_blank',
-        text: 'Get templates',
-        href: 'https://github.com/onwidget/astrowind',
-        icon: 'tabler:download',
+        text: 'Join us',
+        href: 'https://discord.gg/5m5yFgDPF5',
+        icon: 'tabler:brand-discord-filled',
       },
     ]}
   >
