Finish first pass at /team/steve

--- a/astrowind/src/pages/index.astro
+++ b/astrowind/src/pages/index.astro
@@ -121,25 +121,25 @@ const metadata = {
   <!-- Features2 Widget ************** -->
 
   <Features2
-    title="What services do we provide?"
-    subtitle="We offer a wide range of website templates that suit various industries and purposes such as business, portfolio, e-commerce, blog, etc."
+    title="What does PageKey do?"
+    subtitle="We'll give you plenty of free content to get you started on your tech journey."
     items={[
       {
-        title: 'Installation Instructions',
+        title: 'Tutorials and Guides',
         description:
-          'Offer clear instructions on how to download the purchased templates and install them on various website platforms or content management systems.',
+          'We offer clear instructions on how to use various open source technologies, old and new.',
         icon: 'flat-color-icons:document',
       },
       {
-        title: 'Demo and Previews',
+        title: 'Open Source Products',
         description:
-          'Provide interactive demos and previews that allow customers to see how their chosen template will look and function before making a purchase.',
+          'We create products that allow you to dive into the code, learn how they work, and manage your own data.',
         icon: 'flat-color-icons:template',
       },
       {
-        title: 'Technical Support',
+        title: 'Community',
         description:
-          'Providing customer support for any technical issues related to the templates or their implementation.',
+          'Join our Discord and chat with like-minded individuals. Keep an eye out for PageKey hackathons too!',
         icon: 'flat-color-icons:voice-presentation',
       },
     ]}
@@ -151,7 +151,7 @@ const metadata = {
 
   <!-- Features Widget *************** -->
 
-  <Features
+  <!-- <Features
     id="features"
     title="Main features of our templates"
     subtitle="Possess several key characteristics to effectively cater to the needs of startups and entrepreneurs."
@@ -191,11 +191,11 @@ const metadata = {
         icon: 'tabler:plug-connected',
       },
     ]}
-  />
+  /> -->
 
   <!-- FAQs Widget ******************* -->
 
-  <FAQs
+  <!-- <FAQs
     title="Frequently Asked Questions"
     items={[
       {
@@ -233,22 +233,22 @@ const metadata = {
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </FAQs>
+  </FAQs> -->
 
   <!-- Features3 Widget ************** -->
 
   <Features3
-    title="Let us know how we can help"
-    subtitle="We’re here to help and answer any question you might have."
+    title="Let's get in touch."
+    subtitle="We want you to get involved in any way you see fit."
     columns={4}
     items={[
       {
-        title: 'Phone',
-        icon: 'tabler:phone',
+        title: 'YouTube',
+        icon: 'tabler:brand-youtube-filled',
         callToAction: {
           target: '_blank',
-          text: 'Call us',
-          href: '/',
+          text: 'Watch and comment',
+          href: 'https://youtube.com/@PageKey',
           variant: 'link',
         },
       },
@@ -258,27 +258,27 @@ const metadata = {
         callToAction: {
           target: '_blank',
           text: 'Write to us',
-          href: '/',
+          href: 'mailto:pagekeysolutions@gmail.com',
           variant: 'link',
         },
       },
       {
-        title: 'Chat with sales',
+        title: 'Chat on Discord',
         icon: 'tabler:message-circle',
         callToAction: {
           target: '_blank',
           text: 'Start chatting',
-          href: '/',
+          href: 'https://discord.gg/5m5yFgDPF5',
           variant: 'link',
         },
       },
       {
-        title: 'Chat with support',
-        icon: 'tabler:message-circle',
+        title: 'GitHub',
+        icon: 'tabler:brand-github-filled',
         callToAction: {
           target: '_blank',
-          text: 'Start chatting',
-          href: '/',
+          text: 'Discuss and contribute',
+          href: 'https://github.com/pagekey',
           variant: 'link',
         },
       },
@@ -298,11 +298,10 @@ const metadata = {
       },
     ]}
   >
-    <Fragment slot="title">Be a part of our vision</Fragment>
+    <Fragment slot="title">Be a part of the vision</Fragment>
 
     <Fragment slot="subtitle">
-      Discover a dynamic work environment, unparalleled growth opportunities, and the chance to make a meaningful
-      impact.
+      Discover a community of like-minded individuals taking control of the tech in their lives.
     </Fragment>
   </CallToAction>
 </Layout>
