Add BlogYoutubeVideo component
and use in the single blog post that has been moved over

--- a/astrowind/src/pages/index.astro
+++ b/astrowind/src/pages/index.astro
@@ -31,7 +31,7 @@ const metadata = {
         href: 'https://discord.gg/5m5yFgDPF5',
         icon: 'tabler:brand-discord-filled',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: 'Learn more', href: '#what-we-do' },
     ]}
   >
     <Fragment slot="title">
@@ -121,6 +121,7 @@ const metadata = {
   <!-- Features2 Widget ************** -->
 
   <Features2
+    id="what-we-do"
     title="What does PageKey do?"
     subtitle="We'll give you plenty of free content to get you started on your tech journey."
     items={[
