--- a/astrowind/src/pages/team/steve.astro
+++ b/astrowind/src/pages/team/steve.astro
@@ -11,7 +11,7 @@ import Steps from '~/components/widgets/Steps.astro';
 import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
 
 const metadata = {
-  title: 'Personal Homepage Demo',
+  title: 'Steve Grice',
 };
 ---
 
