Fix about text on home page

--- a/astrowind/src/pages/index.astro
+++ b/astrowind/src/pages/index.astro
@@ -51,7 +51,7 @@ const metadata = {
 
   <Features2
     title="About us"
-    subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 4.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
+    subtitle="Passionately committed to helping individuals take charge of their digital journey, our organization is here to support you every step of the way. Through easy-to-follow tutorials and guides, we make self-hosting applications a breeze, empowering you to navigate the tech world with confidence. What's more, we create open-source tools that enhance your experience, making self-hosting not just possible but also rewarding and accessible for everyone in our community."
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
