--- a/astrowind/src/components/common/BlogYoutubeVideo.astro
+++ b/astrowind/src/components/common/BlogYoutubeVideo.astro
@@ -1,8 +1,16 @@
-<div class="text-center w-full">
+---
+const {
+  videoId
+} = Astro.props;
+interface Props {
+  videoId:string
+}
+---
+<div class="text-center w-full overflow-hidden">
     <iframe 
         width="560" 
         height="315" 
-        src="https://www.youtube.com/embed/lJIrF4YjHfQ?si=DfacwCtWTb8tKsze" 
+        src=`https://www.youtube.com/embed/${videoId}`
         title="YouTube video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
