--- a/src/pages/[...blog]/[tag]/[...page].astro
+++ b/src/pages/[...blog]/[tag]/[...page].astro
@@ -31,9 +31,10 @@ const metadata = {
 <Layout metadata={metadata}>
   <section class="px-4 md:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
     <Headline>Tag: {tag}</Headline>
-    <div class="my-4">
-      {page.data.length} posts
-    </div>
+    <p
+      class="text-base text-secondary dark:text-blue-200 font-bold tracking-wide uppercase mb-8 text-center"
+      set:html={`${page.data.length} posts`}
+    />
     <BlogList posts={page.data} />
     <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
   </section>
