--- a/src/pages/blog/tags.astro
+++ b/src/pages/blog/tags.astro
@@ -2,7 +2,6 @@
 import { getUniqueTags } from '~/utils/blog';
 import Layout from '~/layouts/PageLayout.astro';
 import Headline from '~/components/blog/Headline.astro';
-import PostTags from '~/components/blog/Tags.astro';
 
 export const prerender = true;
 
@@ -19,6 +18,17 @@ const metadata = {
     <p class="my-4">
         Here's a list of all the tags used on the site.
     </p>
-    <PostTags tags={tagsList.map(tag => `${tag.tag} (${tag.count})`)} />
+    <ul>
+      {tagsList.map((tag) => (
+        <li class="bg-gray-100 dark:bg-slate-700 inline-block mr-2 rtl:mr-0 rtl:ml-2 mb-2 py-0.5 px-2 lowercase font-medium">
+          <a
+            href={`/tag/${tag.tag}`}
+            class="text-muted dark:text-slate-300 hover:text-primary dark:hover:text-gray-200"
+          >
+            {tag.tag} <span class="bg-gray-800 rounded-md text-xs ml-1 p-1">{tag.count}</span>
+          </a>
+        </li>
+      ))}
+    </ul>
   </section>
 </Layout>
