Gray out sections as you scroll

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -100,6 +100,9 @@ const html = `
       color: ${tokens.dark.colors.default};
       border-color: ${tokens.dark.colors.default};
     }
+    .header-read {
+      color: gray;
+    }
   </style>
 `;
 ---
